# sealr

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: changelog.md  index.md
docs/api/: index.md
docs/contributing/: development.md  index.md  releasing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md
src/sealr/: __main__.py
src/sealr/cli/: __init__.py
tests/: test_cli.py
