# =============================================================================
# Build System
# =============================================================================
[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]


# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "sealr"
description = "A lightweight secret storage vault with CLI and Python API. Stores secrets in encrypted files with master password secured via OS keychain (keyring)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jitesh Sahani (JD)", email = "jitesh.sahani@outlook.com" }]
keywords = [
  "cli",
  "credentials",
  "keychain",
  "keyring",
  "password-manager",
  "secret-management",
  "secrets",
  "security",
  "storage",
  "vault",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]
dynamic = ["version"]

dependencies = ["click>=8.1"]


# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
docs = [
  "mike>=2.0",
  "mkdocs>=1.5",
  "mkdocs-autorefs>=1.0",
  "mkdocs-gen-files>=0.5",
  "mkdocs-macros-plugin>=1.0",
  "mkdocs-material>=9.4",
  "mkdocstrings>=0.24",
  "mkdocstrings-python>=1.8",
  "pymdown-extensions>=10.0",
  "ruff>=0.1",
  "towncrier>=23.0",
]
tests = ["pytest>=7.4", "pytest-cov>=4.0"]
types = ["mypy>=1.8"]


# =============================================================================
# Project URLs
# =============================================================================
[project.urls]
Documentation = "https://jd-35656.github.io/sealr/"
Issues = "https://github.com/jd-35656/sealr/issues"
Source = "https://github.com/jd-35656/sealr"


# =============================================================================
# CLI Entry Points
# =============================================================================
[project.scripts]
sealr = "sealr.cli:sealr"


# =============================================================================
# Hatch - Version Management
# =============================================================================
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
fallback_version = "0.0.0"
local_scheme = "node-and-date"
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--match",
  "v*",
]


# =============================================================================
# Hatch - Build Configuration
# =============================================================================
[tool.hatch.build.hooks.vcs]
version-file = "src/sealr/__version__.py"

[tool.hatch.build.targets.wheel]
exclude = ["src/sealr/__version__.pyi"]


# =============================================================================
# Ruff - Linter & Formatter
# =============================================================================
[tool.ruff]
line-length = 121
src = ["src", "tests", "scripts"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C9",   # mccabe
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "N",    # pep8-naming
  "PERF", # perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PLC",  # pylint convention
  "PLE",  # pylint error
  "PLR",  # pylint refactor
  "PLW",  # pylint warning
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific
  "S",    # flake8-bandit (security)
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["sealr"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",    # Use of assert detected
  "S106",    # Possible hardcoded password
  "S108",    # Probable insecure usage of temp file/directory
  "S311",    # Standard pseudo-random generators not suitable for security/cryptographic purposes
  "S603",    # subprocess call: check for execution of untrusted input
  "S607",    # Starting a process with a partial executable path
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "PLR0913", # Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "D",       # pydocstyle (docstring rules)
]


# =============================================================================
# Codespell - Spell Checker
# =============================================================================
[tool.codespell]
skip = ".nox,.git,venv,__pycache__,.mypy_cache,.ruff_cache"
check-hidden = true
quiet-level = 2


# =============================================================================
# Pytest - Testing Framework
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=sealr",
  "--cov-report=term-missing",
]


# =============================================================================
# Coverage - Code Coverage
# =============================================================================
[tool.coverage.run]
source = ["sealr"]
branch = true
parallel = true
relative_files = true
concurrency = ["multiprocessing"]
omit = ["src/sealr/__version__.py"]

[tool.coverage.paths]
package = ["src/sealr", "*/sealr/src/sealr"]
tests = ["tests", "*/sealr/tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
fail_under = 90
show_missing = true


# =============================================================================
# Towncrier - Changelog Management
# =============================================================================
[tool.towncrier]
directory = "changelog.d"
filename = "docs/changelog.md"
package = "sealr"
start_string = "<!-- BEGIN RELEASED CHANGELOG -->\n"
title_format = "## [{version}](https://github.com/jd-35656/sealr/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/jd-35656/sealr/issues/{issue})"

[[tool.towncrier.type]]
name = "Security"

[[tool.towncrier.type]]
name = "Removed"

[[tool.towncrier.type]]
name = "Deprecated"

[[tool.towncrier.type]]
name = "Added"

[[tool.towncrier.type]]
name = "Changed"

[[tool.towncrier.type]]
name = "Fixed"


# =============================================================================
# Mypy - Static Type Checking
# =============================================================================
[tool.mypy]
files = ["src"]
ignore_missing_imports = true
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
